# ga-benchmark

./: .gitignore  BinaryOperations.cpp  CMakeLists.txt  Macros.hpp  README.md  UnaryOperations.cpp  Utils.hpp  example.clangd  gabm.py  gabm_results.ipynb  justfile  prepare_results.py  xmake.lua
evaluation/: CMakeLists.txt  main.cpp
source/GAL/: CMakeLists.txt  SpecializedBinaryOperations.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
source/Gaalet/: SpecializedAlgebra.hpp
source/Gaalop/: OptimizeSpecializedAlgorithmInverseKinematics.cmake  OptimizeSpecializedBinaryOperations.cmake  OptimizeSpecializedUnaryOperations.cmake  OptimizeSpecializedUtils.cmake  SpecializedUtils.hpg
source/Versor/: CMakeLists.txt  SpecializedAlgebra.hpp
source/gafro/: CMakeLists.txt  SpecializedAlgebra.hpp  SpecializedBinaryOperations.hpp  SpecializedUnaryOperations.hpp  SpecializedUtils.hpp
